# sepal_pysmm

./: .gitignore  CHANGELOG.md  README.md  UI.ipynb  Untitled.ipynb  about_ui.ipynb  closing_filter.py  display_map.ipynb  download_UI.ipynb  filter_UI.ipynb  find.ipynb  install_pysmm.ipynb  keys.txt  map_UI.ipynb  no_ui.ipynb  nox_ui.ipynb  process_UI.ipynb  pyproject.toml  pysmm_manual_download.ipynb  pysmm_postprocess.ipynb  pysmm_process.ipynb  requirements.txt  ruff.toml  run_pysmm.ipynb  statistics_UI.ipynb  test.py  test_GEE_wrappers.ipynb  test_download.ipynb  test_download_ui.ipynb  test_process.ipynb  tests.ipynb  ui.ipynb
.ipynb_checkpoints/: UI-checkpoint.ipynb  Untitled1-checkpoint.ipynb  filter_UI-checkpoint.ipynb  process_UI-checkpoint.ipynb  statistics_UI-checkpoint.ipynb
doc/: en.rst
notebooksGWLSepal/: 0_outlier_removal_field.ipynb  1a_create_training_basic.ipynb  1b_add_training_aux.ipynb  1c_add_training_extra.ipynb  2_outlier_removed_modelling.ipynb  2b_mask_creation.ipynb  3_apply_GWL_model.ipynb
python/: GEE_wrappers.py  derive_SM.py  run_pysmm.py  utils.py
run_pysmm/: create_venv.sh  run_pysmm.py
sample_data/: Extract_TS.ipynb  TS_Visualizer.ipynb
scripts/: GEE_wrappers-Copy1.py  GEE_wrappers.py  create_venv.sh  derive_SM.py  download_to_sepal.py  filechooser.py  filter_closing_smm.py  filter_closing_smm_20190808.R  jupyter_utils.py  manual_download.py  run_pysmm.py  run_pysmm.sh  stackstat.py  utils.py
sepal_ui/: aoi.py  dateselector.py  mapping.py  sepalwidgets.py  sepalwidgets_ui.py  widgetBinding.py  widgetFactory.py
(+89 files in other folders)
